new data, wip on station walks when part of line shut, workarounds for issues with current data version which has alty line closure 1 week too early